@@ -1,3 +1,7 @@
+[B]1.4.2[/B]
+- Added: option for using Http Basic Auth
+- Fixed: minor bugs
+
 [B]1.4.1[/B]
 - Fixed: image link/path utf-8 encoded
 
